--- a/services/frontend/vuesite/package.json
+++ b/services/frontend/vuesite/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "20": "^1.0.0",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
