--- a/services/nginx.conf
+++ b/services/nginx.conf
@@ -1,37 +1,36 @@
-worker_processes auto;
-
-events {
-    worker_connections 1024;
-}
-
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    types {
+        application/javascript js mjs;
+        text/css css;
+        image/svg+xml svg;
+        font/woff2 woff2;
+    }
+
     server {
         listen 80;
-        server_name proggyit.ru;  # Замените на ваш домен (например, vue.proggyit.ru)
+        server_name proggyit.ru;
 
-        # Корень со статикой Vue
         root /usr/share/nginx/html;
         index index.html;
 
-        # Отключаем кэш для HTML (чтобы обновлялся фронтенд)
         location = /index.html {
             add_header Cache-Control "no-cache, no-store, must-revalidate";
             expires -1;
         }
 
-        # Кэширование статики (JS/CSS/изображения)
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2)$ {
+        location ~* \.(js|mjs|css|png|jpg|jpeg|gif|ico|svg|woff2)$ {
             expires 365d;
             access_log off;
             add_header Cache-Control "public, no-transform";
         }
 
-        # SPA-роутинг (все пути ведут на index.html)
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        # Безопасность
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-Content-Type-Options "nosniff";
         add_header Referrer-Policy "strict-origin-when-cross-origin";
