--- a/services/nginx.conf
+++ b/services/nginx.conf
@@ -1,38 +1,30 @@
+user  nginx;
+worker_processes  1;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+events {
+    worker_connections  1024;
+}
 http {
-    include       mime.types;
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
-    types {
-        application/javascript js mjs;
-        text/css css;
-        image/svg+xml svg;
-        font/woff2 woff2;
-    }
-
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log  /var/log/nginx/access.log  main;
+    sendfile        on;
+    keepalive_timeout  65;
     server {
-        listen 80;
-        server_name proggyit.ru;
-
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location = /index.html {
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            expires -1;
-        }
-
-        location ~* \.(js|mjs|css|png|jpg|jpeg|gif|ico|svg|woff2)$ {
-            expires 365d;
-            access_log off;
-            add_header Cache-Control "public, no-transform";
-        }
-
+        listen       80;
+        server_name  proggyit.ru;
         location / {
+            root   /app;
+            index  index.html;
             try_files $uri $uri/ /index.html;
         }
-
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-Content-Type-Options "nosniff";
-        add_header Referrer-Policy "strict-origin-when-cross-origin";
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
     }
 }
