--- a/services/nginx.conf
+++ b/services/nginx.conf
@@ -18,7 +18,7 @@ http {
         listen       80;
         server_name  proggyit.ru;
         location / {
-            root   /app;
+            root   /;
             index  index.html;
             try_files $uri $uri/ /index.html;
         }
