--- a/services/server/docker-compose.yml
+++ b/services/server/docker-compose.yml
@@ -50,9 +50,25 @@ services:
       - strapi
       -
 
+  nginx:
+    image: nginx:alpine
+    container_name: strapi_nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/nginx/ssl
+    depends_on:
+      - strapi
+    networks:
+      - strapi
+
 
 networks:
   strapi:
     name: Strapi
     driver: bridge
 
+volumes:
+  strapi-data:
