--- a/services/nginx.conf
+++ b/services/nginx.conf
@@ -3,26 +3,34 @@ events {}
 http {
     include       mime.types;
     default_type  application/octet-stream;
-    sendfile        on;
 
     server {
         listen 80;
         server_name proggyit.ru;
 
-        root /usr/share/nginx/html;
-        index index.html;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
         location / {
-            try_files $uri $uri/ /index.html;
+            return 301 https://$host$request_uri;
         }
+    }
 
-        location /assets/ {
-            try_files $uri =404;
-        }
+    server {
+        listen 443 ssl;
+        server_name proggyit.ru;
 
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
+        ssl_certificate /etc/letsencrypt/live/proggyit.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/proggyit.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        root /usr/share/nginx/html;
+
+        location / {
+            try_files $uri $uri/ =404;
         }
     }
 }
