--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,12 +1,29 @@
+version: "3.7"
 services:
-  # Nginx для раздачи статики Vue
   nginx:
     image: nginx:alpine
     container_name: vue_nginx
     ports:
-      - "80:80"       # HTTP
-      - "443:443"     # HTTPS (если добавите SSL)
+      - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./dist:/usr/share/nginx/html  # Папка со сборкой Vue
+      - ./dist:/usr/share/nginx/html
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     restart: unless-stopped
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: /bin/sh -c
+    command: >
+      "certbot certonly --webroot
+      --webroot-path=/var/www/certbot
+      --email you@example.com
+      --agree-tos
+      --no-eff-email
+      -d proggyit.ru"
