nginx file ready

--- a/services/nginx.conf
+++ b/services/nginx.conf
@@ -3,20 +3,28 @@ events {}
 http {
     include       mime.types;
     default_type  application/octet-stream;
+    sendfile        on;
 
+    # HTTP для Let's Encrypt и редиректа
     server {
         listen 80;
         server_name proggyit.ru;
 
+        root /usr/share/nginx/html;
+        index index.html;
+
+        # Поддержка Certbot challenge
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
 
+        # Редирект на HTTPS (если уже есть сертификат)
         location / {
             return 301 https://$host$request_uri;
         }
     }
 
+    # HTTPS-сервер (активируется после получения SSL)
     server {
         listen 443 ssl;
         server_name proggyit.ru;
@@ -28,9 +36,19 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         root /usr/share/nginx/html;
+        index index.html;
 
         location / {
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /assets/ {
+            try_files $uri =404;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
         }
     }
 }
