nginx file ready

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,12 +1,50 @@
+version: "3.8"
+
 services:
-  # Nginx для раздачи статики Vue
+  # Генерация DH-параметров (один раз)
+  init-dhparams:
+    image: certbot/certbot
+    restart: "no"
+    entrypoint: /bin/sh
+    command: -c 'test -f /etc/letsencrypt/ssl-dhparams.pem || openssl dhparam -out /etc/letsencrypt/ssl-dhparams.pem 4096'
+    volumes:
+      - cert_volume:/etc/letsencrypt
+
+  # Получение SSL-сертификатов (первичное)
+  certbot-oneshot:
+    image: certbot/certbot
+    restart: "no"
+    entrypoint: /bin/sh
+    command: -c 'test -d /etc/letsencrypt/live/proggyit.ru || certbot certonly --standalone --register-unsafely-without-email -d "proggyit.ru" --rsa-key-size 2048 --agree-tos --force-renewal'
+    ports:
+      - "80:80"
+    volumes:
+      - cert_volume:/etc/letsencrypt
+
+  # Основной веб-сервер
   nginx:
     image: nginx:alpine
-    container_name: vue_nginx
-    ports:
-      - "80:80"       # HTTP
-      - "443:443"     # HTTPS (если добавите SSL)
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./dist:/usr/share/nginx/html  # Папка со сборкой Vue
     restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./dist:/usr/share/nginx/html
+      - cert_volume:/etc/letsencrypt
+    depends_on:
+      - init-dhparams
+      - certbot-oneshot
+
+  # Автообновление сертификатов
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    entrypoint: /bin/sh
+    command: -c 'trap exit TERM; while :; do certbot renew; sleep 12h; done;'
+    volumes:
+      - cert_volume:/etc/letsencrypt
+      - ./dist:/usr/share/nginx/html
+
+volumes:
+  cert_volume:
