--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,55 +1,15 @@
-version: "3.8"
-
 services:
-  # Генерация DH-параметров (один раз)
-  init-dhparams:
-    image: certbot/certbot
-    restart: "no"
-    entrypoint: /bin/sh
-    command: -c 'test -f /etc/letsencrypt/ssl-dhparams.pem || openssl dhparam -out /etc/letsencrypt/ssl-dhparams.pem 4096'
-    volumes:
-      - cert_volume:/etc/letsencrypt
-
-  # Получение SSL-сертификатов (первичное)
-  certbot-oneshot:
-    image: certbot/certbot
-    restart: "no"
-    entrypoint: /bin/sh
-    command: -c 'test -d /etc/letsencrypt/live/proggyit.ru || certbot certonly --standalone --register-unsafely-without-email -d "proggyit.ru" --rsa-key-size 2048 --agree-tos --force-renewal'
+  webserver:
+    image: nginx:latest
     ports:
-      - "80:80"
+      - 80:80
+      - 443:443
+    restart: always
     volumes:
-      - cert_volume:/etc/letsencrypt
-    networks:
-      - webnet
-  # Основной веб-сервер
-  nginx:
-    image: nginx:alpine
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./dist:/usr/share/nginx/html
-      - cert_volume:/etc/letsencrypt
-    depends_on:
-      - init-dhparams
-      - certbot-oneshot
-    networks:
-      - webnet
-  # Автообновление сертификатов
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www/:/var/www/certbot/:ro
   certbot:
-    image: certbot/certbot
-    restart: unless-stopped
-    entrypoint: /bin/sh
-    command: -c 'trap exit TERM; while :; do certbot renew; sleep 12h; done;'
+    image: certbot/certbot:latest
     volumes:
-      - cert_volume:/etc/letsencrypt
-      - ./dist:/usr/share/nginx/html
-
-volumes:
-  cert_volume:
-
-networks:
-  webnet:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
