nginx file ready222

--- a/services/nginx.conf
+++ b/services/nginx.conf
@@ -1,42 +1,54 @@
-server {
-    listen 80;
-    server_name proggyit.ru www.proggyit.ru;
-    return 301 https://proggyit.ru$request_uri;
-}
+events {}
 
-server {
-    listen 443 ssl http2;
-    server_name proggyit.ru;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
 
-    ssl_certificate /etc/letsencrypt/live/proggyit.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/proggyit.ru/privkey.pem;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    # HTTP для Let's Encrypt и редиректа
+    server {
+        listen 80;
+        server_name proggyit.ru;
 
-    # Оптимизация SSL
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
+        root /usr/share/nginx/html;
+        index index.html;
 
-    # Корень сайта
-    root /usr/share/nginx/html;
-    index index.html;
+        # Поддержка Certbot challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
-    # Статика
-    location / {
-        try_files $uri $uri/ /index.html;
+        # Редирект на HTTPS (если уже есть сертификат)
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
-    # Кэширование статики
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2)$ {
-        expires 365d;
-        access_log off;
-        add_header Cache-Control "public, no-transform";
-    }
+    # HTTPS-сервер (активируется после получения SSL)
+    server {
+        listen 443 ssl;
+        server_name proggyit.ru;
 
-    # Безопасность
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header Referrer-Policy "strict-origin-when-cross-origin";
-    add_header Content-Security-Policy "default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'";
+        ssl_certificate /etc/letsencrypt/live/proggyit.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/proggyit.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /assets/ {
+            try_files $uri =404;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+    }
 }
