--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,16 +1,13 @@
 services:
-  webserver:
-    image: nginx:latest
+  # Nginx для раздачи статики Vue
+  nginx:
+    image: nginx:alpine
+    container_name: vue_nginx
     ports:
-      - 80:80
-      - 443:443
-    restart: always
+      - "80:80"       # HTTP
+      - "443:443"     # HTTPS (если добавите SSL)
     volumes:
-      - ./nginx/conf/:/etc/nginx/conf.d/:ro
-      - ./certbot/www/:/var/www/certbot/:ro
-      -
-  certbot:
-    image: certbot/certbot:latest
-    volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./dist:/usr/share/nginx/html  # Папка со сборкой Vue
+    restart: unless-stopped
+
