--- a/services/frontend/vuesite/.env
+++ b/services/frontend/vuesite/.env
@@ -1,2 +1,2 @@
-VITE_STRAPI_API_URL=http://localhost:1337/api
-VITE_STRAPI_URL=http://localhost:1337
+VITE_STRAPI_API_URL=https://original-trust-8660eabba1.strapiapp.com/api
+VITE_STRAPI_URL=https://original-trust-8660eabba1.strapiapp.com
