--- a/services/frontend/vuesite/package.json
+++ b/services/frontend/vuesite/package.json
@@ -23,7 +23,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.15.32",
@@ -42,10 +42,11 @@
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.1.0",
     "postcss": "^8.5.6",
+    "postcss-preset-env": "^10.2.4",
     "prettier": "3.5.3",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.0",
-    "vite": "^7.0.0",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.10"
