--- a/services/frontend/vuesite/package.json
+++ b/services/frontend/vuesite/package.json
@@ -19,6 +19,8 @@
     "20": "^1.0.0",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "axios-cache-interceptor": "^1.8.0",
+    "lucide-vue-next": "^0.525.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
