--- a/services/server/docker-compose.yml
+++ b/services/server/docker-compose.yml
@@ -1,58 +1,26 @@
+version: '3'
 services:
   strapi:
-    container_name: strapi
-    build: ..
-    image: strapi:latest
-    restart: unless-stopped
-    env_file: .env
+    image: strapi/strapi
     environment:
-      DATABASE_CLIENT: ${DATABASE_CLIENT}
-      DATABASE_HOST: strapiDB
-      DATABASE_PORT: ${DATABASE_PORT}
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      JWT_SECRET: ${JWT_SECRET}
-      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
-      APP_KEYS: ${APP_KEYS}
-      NODE_ENV: ${NODE_ENV}
+      DATABASE_CLIENT: postgres
+      DATABASE_NAME: strapi
+      DATABASE_HOST: postgres
+      DATABASE_PORT: 5432
+      DATABASE_USERNAME: strapi
+      DATABASE_PASSWORD: strapi
     volumes:
-      - ./config:/opt/app/config
-      - ./src:/opt/app/src
-      - ./package.json:/opt/package.json
-      - ./yarn.lock:/opt/yarn.lock
-      - ./.env:/opt/app/.env
-      - ./public/uploads:/opt/app/public/uploads
+      - ./app:/srv/app
     ports:
-      - "1337:1337"
-    networks:
-      - strapi
+      - '1337:1337'
     depends_on:
-      - strapiDB
+      - postgres
 
-  strapiDB:
-    container_name: strapiDB
-    platform: linux/amd64 #for platform error on Apple M1 chips
-    restart: unless-stopped
-    env_file: ../.env
-    image: postgres:16.0-alpine
+  postgres:
+    image: postgres
     environment:
-      POSTGRES_USER: ${DATABASE_USERNAME}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_DB: strapi
+      POSTGRES_USER: strapi
+      POSTGRES_PASSWORD: strapi
     volumes:
-      - strapi-data:/var/lib/postgresql/data/ #using a volume
-      #- ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
-    ports:
-      - "5432:5432"
-    networks:
-      - strapi
-
-
-networks:
-  strapi:
-    name: Strapi
-    driver: bridge
-
-volumes:
-  strapi-data:
+      - ./data:/var/lib/postgresql/data
